k8s/deamonSet.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: flask-daemonset
  labels:
    app: flask-api
spec:
  selector:
    matchLabels:
      app: flask-api
  template:
    metadata:
      labels:
        app: flask-api
    spec:
      containers:
      - name: flask-api
        image: nghia5/flask-api:latest
        ports:
        - containerPort: 5000
---
