k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: flask-api
  labels:
    app: flask-api
spec:
  containers:
    - name: flask-api
      image: nghia5/flask-api:latest 
      ports:
        - containerPort: 5000
