k8s/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mystatefulset
spec:
  selector:
    matchLabels:
      app: flask-api
  #serviceName: <ServiceName>
  replicas: 3
  template:
    metadata:
      labels:
        app: flask-api
    spec:
      containers:
      - name: myapp
        image: nghia5/flask-api:latest
        ports:
        - containerPort: 80
---
