k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-api-nodeport 
spec:
  type: NodePort
  selector:
    app: flask-api
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 30008
