k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  namespace: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: my-ingress
  rules:
  - host: nghia.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: flask-api-clusterip
              port:
                number: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: flask-api-clusterip
  namespace: ingress-nginx
spec:
  #type: NodePort
  selector:
    app: flask-api
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      #nodePort: 30008 
---
apiVersion: v1
kind: Pod
metadata:
  name: flask-api
  labels:
    app: flask-api
  namespace: ingress-nginx
spec:
  containers:
    - name: flask-api
      image: nghia5/flask-api:v1 
      ports:
        - containerPort: 5000
#80 443
